# ai-config

./: .gitignore  LICENSE  README.md  ai-config  ai-config.bat  ai-config.ps1  build-after-install.js  cli-entry.js  cli.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/skills_zh/document-skills/docx/: ooxml.md
.claude/skills_zh/document-skills/pptx/: ooxml.md
.claude/skills_zh/document-skills/xlsx/: SKILL.md
.claude/skills_zh/mcp-builder/reference/: python_mcp_server.md
.claude/skills_zh/skill-creator/references/: output-patterns.md
.specify/: config.txt
ai_config_tool/: __init__.py  backup.py  cli.py  constants.py  git_utils.py  path_utils.py  push.py  sync.py
ai_config_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: ai-config-requirements.md
remote-config/ai/.ai/: config.txt
remote-config/ai/.claude/: .gitkeep  settings.local.json
remote-config/ai/.claude/commands/: design-doc.md  speckit.breakdown.md  speckit.discovery.md  speckit.specify.md
remote-config/ai/.claude/skills/cursor-sync/: SKILL.md
remote-config/ai/.claude/skills_zh/mcp-builder/: SKILL.md
remote-config/ai/.claude/skills_zh/skill-creator/: SKILL.md
remote-config/ai/.cursor/: .gitkeep
remote-config/ai/.cursor/rules/: skills.mdc  skills_inventory.json
remote-config/ai/.trae/rules/: project_rules.md
src/: backup.js  backup.ts  cli.js  cli.ts  constants.js  constants.ts  git-utils.js  git-utils.ts  index.js  index.ts  push.js  push.ts  sync.js  sync.ts  types.js  types.ts  utils.js  utils.ts
(+10 files in other folders)
