[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-config-tool"
version = "0.1.0"
description = "Sync and push AI IDE configs for Claude / Code Cursor"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
authors = [
  { name = "ai-coder-extends maintainers" }
]
keywords = ["ai", "ide", "config", "claude", "code-cursor"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
ai-config = "ai_config_tool.cli:main"
